--- a/src/components/RouletteWheel/RouletteWheel.css
+++ b/src/components/RouletteWheel/RouletteWheel.css
@@ -13,6 +13,7 @@
   font-size: 18px;
 	font-weight: 400;
 	font-family: Helvetica, sans-serif;
+  line-height: 1.15;
 }
 
 .roulette-wheel-bet-number:nth-child(1) {
